--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-dist: bionic
+---
 
+dist: focal
 language: minimal
 
 services:
@@ -17,4 +18,4 @@ deploy:
   script: "./push.sh"
   skip_cleanup: true
   on:
-    branch: master
+    branch: main
