--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,13 @@ env:
   global:
     - DOCKER_REPO: 9jkh/certbot-dns
 
-before_install:
-  - ./build.sh
+install:
+  - make build
+  - make test
 
 deploy:
   provider: script
-  script: "./push.sh"
+  script: make publish
   skip_cleanup: true
   on:
     branch: main
